# models/question.go
@@ -6,7 +6,7 @@ type Question struct {
 	gorm.Model
 	Id            *uint64        `json:"id" gorm:"column=id;primaryKey;autoIncrement"`
 	Difficulty    string         `json:"difficulty" validate:"required,oneof=hard eazy"`
-	Points        *int           `json:"points" validate:"required,min=1,max=6"`
+	MaxPoints     *float64       `json:"max_points" validate:"required,min=1,max=6"`
 	Name          string         `json:"name" validate:"required" gorm:"unique"`
 	SkillId       *uint64        `json:"skill_id"`
 	Type          string         `json:"type"`
@@ -15,4 +15,5 @@ type Question struct {
 	FileReadMe    string         `json:"file_read_me"`
 	TestQuestions []TestQuestion `json:"test_questions"`
 	Choices       []Choices      `json:"choices"`
+	Answer        []Answer       `json:"answer"`
 }
